Fix bug with title station being too small

--- a/sprint4-frontend/src/assets/styles/cmps/_StationDetails.scss
+++ b/sprint4-frontend/src/assets/styles/cmps/_StationDetails.scss
@@ -96,14 +96,12 @@
                 margin-bottom: 4px;
             }
 
-            .title-station {
 
-                h1 {
-                    font-family: circular-bold, sans-serif;
-                    font-size: 100px;
-                    margin-left: 4px;
-                    margin-bottom: -2px;
-                }
+            h1.title-station {
+                font-family: circular-bold, sans-serif;
+                font-size: 100px;
+                margin-left: 4px;
+                margin-bottom: -2px;
             }
         }
     }
